--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Enter your credentials</ion-card-title>
+      <ion-card-title>Ingresa tus datos</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item-group>
@@ -10,12 +10,12 @@
           <ion-input type="email"></ion-input>
         </ion-item>
         <ion-item color="darkblue">
-          <ion-label position="floating">Password</ion-label>
+          <ion-label position="floating">Contraseña</ion-label>
           <ion-input type="password"></ion-input>
         </ion-item>
       </ion-item-group>
-      <ion-button class="botonesLogin" color="rgb(208, 106, 16)">Login</ion-button>
-      <ion-button class="botonesLogin">Register</ion-button>
+      <ion-button class="botonesLogin" color="rgb(208, 106, 16)" [routerLink]="['/home']">Ingresar</ion-button>
+      <ion-button class="botonesLogin" [routerLink]="['/register']">Registrarse</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
