--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,13 +1,11 @@
-ion-menu::part(backdrop) {
-  background-color: rgba(37, 43, 122, 0.5);
+.headerSection {
+  padding: 10% 5% 5% 5%;
 }
 
-ion-menu::part(container) {
-  border-radius: 0 20px 20px 0;
-
-  box-shadow: 4px 0px 16px rgba(0, 4, 236, 0.18);
+.backArrow{
+  width: 60px;
+  height: 60px;
 }
-
 .userPic {
   width: 50px;
   height: 50px;
