--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,20 +1,35 @@
 ion-content {
-    --background: url('../../../assets/img/pattern.svg');
+    --background: #113862;
 }
 
-ion-card {
-    margin-top: 50%;
-    background-color: darkblue;
-;
+.logoSpace {
+    width: 100%;
+    height: 113px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30%;
+    margin-bottom: 25%;
 }
 
-ion-card-content {
-    background-color: darkblue;
+.loginInput {
+    width: 80%;
+    margin: auto;
 }
 
-ion-item {
-    background-color: darkblue;
-    border-radius: 5px;
+
+ion-input.inputField {
+    border-radius: 10px;
+    --border-bottom: none;
+}
+
+.inputTop {
+    border-radius: 20px 20px 0px 0px;
+    border-bottom: none;
+}
+
+.inputBot {
+    border-radius: 0px 0px 20px 20px;
+    margin-bottom: 5%;
 }
 
 ion-button {
@@ -23,9 +38,13 @@ ion-button {
     border-radius: 5px;
 }
 
-.botonesLogin {
-    width: 100%;
+/* .botonesLogin {
+    
+} */ 
+
+.buttonGroup {
+    width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content:center;
+    margin: auto;
 }
