add angular material

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,7 +9,7 @@
   </ion-header>
   <ion-content class="ion-padding">
     <ion-item>
-      <ion-card>
+      <ion-card [routerLink]="['/main']">
         <ion-card-header>Nueva Build</ion-card-header>
       </ion-card>
     </ion-item>
