--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -1,20 +1,35 @@
-
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">main</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-label>Selecciona una CPU</ion-label>
   <div *ngIf="cpuData">
-    <ion-select interface="popover" (ionChange)="onCpuSelect($event)">
+    <ion-select interface="popover" (ionChange)="onCpuSelect($event)" placeholder="Selecciona CPU">
       <ion-select-option *ngFor="let item of cpuData" [value]="item">{{ item.brand +" "+ item.model }}</ion-select-option>
     </ion-select>
   </div>
+  <br>
   <div *ngIf="motherboardData">
-    <ion-select interface="popover" (ionChange)="onMotherboardSelect($event)">
+    <ion-select interface="popover" (ionChange)="onMotherboardSelect($event)" placeholder="Selecciona placa madre">
       <ion-select-option *ngFor="let item of filteredMotherboardData" [value]="item">{{ item.brand +" "+ item.model }}</ion-select-option>
+    </ion-select>
+  </div>
+  <br>
+  <div *ngIf="ramData">
+    <ion-select interface="popover" [(ngModel)]="selectedRam" placeholder="Selecciona RAM">
+      <ion-select-option *ngFor="let ram of filteredRamData" [value]="ram">{{ ram.brand }} {{ ram.model }} {{ ram.capacity }}GB</ion-select-option>
+    </ion-select>
+  </div>
+  <div *ngIf="gpuData">
+    <ion-select interface="popover" (ionChange)="onGpuSelect($event)" placeholder="Selecciona GPU">
+      <ion-select-option *ngFor="let gpu of gpuData" [value]="gpu">{{ gpu.brand }} {{ gpu.model }}</ion-select-option>
+    </ion-select>
+  </div>
+  <br>
+  <div *ngIf="caseData">
+    <ion-select interface="popover" [(ngModel)]="selectedCase" (ionChange)="onCaseSelect($event)" placeholder="Selecciona Case">
+      <ion-select-option *ngFor="let caseItem of filteredCaseData" [value]="caseItem">{{ caseItem.brand }} {{ caseItem.model }}</ion-select-option>
     </ion-select>
   </div>
   <ion-label *ngIf="!isCompatible" color="danger">CPU and Motherboard are not compatible.</ion-label>
