sueño mucho sueño

--- a/src/app/pages/intro/intro.page.html
+++ b/src/app/pages/intro/intro.page.html
@@ -10,4 +10,10 @@
       <ion-title size="large">intro</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-button
+      class="botonesLogin"
+      color="rgb(208, 106, 16)"
+      [routerLink]="['/login']"
+      >Siguiente</ion-button
+    >
 </ion-content>
