--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -10,4 +10,15 @@
       <ion-title size="large">register</ion-title>
     </ion-toolbar>
   </ion-header>
+  <form [formGroup]="registrationForm" (ngSubmit)="registerUser()">
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input formControlName="email" type="email" ngDefaultControl></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input formControlName="password" type="password" ngDefaultControl></ion-input>
+    </ion-item>
+    <ion-button expand="block" type="submit" [disabled]="!registrationForm.valid">Register</ion-button>
+  </form>
 </ion-content>
