--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
   </div>
   
   <div class="login-container">
-    <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <!-- <form [formGroup]="loginForm" (ngSubmit)="login()">
       <ion-item>
         <ion-label position="floating">Email</ion-label>
         <ion-input formControlName="email" type="email"></ion-input>
@@ -17,7 +17,7 @@
       <ion-text color="danger" *ngIf="errorMessage">
         <p>{{ errorMessage }}</p>
       </ion-text>
-    </form>
+    </form> -->
   </div>
   <div class="buttonGroup">
     <ion-button
