--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -1,36 +1,69 @@
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-menu side="end" contentId="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">main</ion-title>
+      <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
-  <div *ngIf="cpuData">
-    <ion-select interface="popover" (ionChange)="onCpuSelect($event)" placeholder="Selecciona CPU">
-      <ion-select-option *ngFor="let item of cpuData" [value]="item">{{ item.brand +" "+ item.model }}</ion-select-option>
-    </ion-select>
-  </div>
-  <br>
-  <div *ngIf="motherboardData">
-    <ion-select interface="popover" (ionChange)="onMotherboardSelect($event)" placeholder="Selecciona placa madre">
-      <ion-select-option *ngFor="let item of filteredMotherboardData" [value]="item">{{ item.brand +" "+ item.model }}</ion-select-option>
-    </ion-select>
-  </div>
-  <br>
-  <div *ngIf="ramData">
-    <ion-select interface="popover" [(ngModel)]="selectedRam" placeholder="Selecciona RAM">
-      <ion-select-option *ngFor="let ram of filteredRamData" [value]="ram">{{ ram.brand }} {{ ram.model }} {{ ram.capacity }}GB</ion-select-option>
-    </ion-select>
-  </div>
-  <div *ngIf="gpuData">
-    <ion-select interface="popover" (ionChange)="onGpuSelect($event)" placeholder="Selecciona GPU">
-      <ion-select-option *ngFor="let gpu of gpuData" [value]="gpu">{{ gpu.brand }} {{ gpu.model }}</ion-select-option>
-    </ion-select>
-  </div>
-  <br>
-  <div *ngIf="caseData">
-    <ion-select interface="popover" [(ngModel)]="selectedCase" (ionChange)="onCaseSelect($event)" placeholder="Selecciona Case">
-      <ion-select-option *ngFor="let caseItem of filteredCaseData" [value]="caseItem">{{ caseItem.brand }} {{ caseItem.model }}</ion-select-option>
-    </ion-select>
-  </div>
-  <ion-label *ngIf="!isCompatible" color="danger">CPU and Motherboard are not compatible.</ion-label>
-</ion-content>
+  <ion-content class="ion-padding" class="listMenu">
+    <ion-list>
+      <ion-item class="listMenu">
+        <ion-label>Profile</ion-label>
+      </ion-item>
+      <ion-item class="listMenu">
+        <ion-label>Settings</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <div class="headerWrapper">
+        <div class="backArrow">
+          <ion-img
+            src="../../../assets/img/arrow-back-circle-outline.svg"
+            [routerLink]="['/home']"
+          ></ion-img>
+        </div>
+        <ion-title class="title">Hola, Usuario!</ion-title>
+      </div>
+      <ion-buttons slot="end">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <div class="mainWrapper">
+      <ion-label><p>Selecciona tus componentes:</p></ion-label>
+      <div *ngIf="cpuData">
+        <ion-select fill="outline" interface="popover" (ionChange)="onCpuSelect($event)" placeholder="Selecciona CPU">
+          <ion-select-option *ngFor="let item of cpuData" [value]="item">{{ item.brand +" "+ item.model }}</ion-select-option>
+        </ion-select>
+      </div>
+      <br>
+      <div *ngIf="motherboardData">
+        <ion-select fill="outline" interface="popover" (ionChange)="onMotherboardSelect($event)" placeholder="Selecciona Placa madre">
+          <ion-select-option *ngFor="let item of filteredMotherboardData" [value]="item">{{ item.brand +" "+ item.model }}</ion-select-option>
+        </ion-select>
+      </div>
+      <br>
+      <div *ngIf="ramData">
+        <ion-select fill="outline" interface="popover" [(ngModel)]="selectedRam" placeholder="Selecciona RAM">
+          <ion-select-option *ngFor="let ram of filteredRamData" [value]="ram">{{ ram.brand }} {{ ram.model }} {{ ram.capacity }}GB</ion-select-option>
+        </ion-select>
+      </div>
+      <br>
+      <div *ngIf="gpuData">
+        <ion-select fill="outline" interface="popover" (ionChange)="onGpuSelect($event)" placeholder="Selecciona Tarjeta gráfica">
+          <ion-select-option *ngFor="let gpu of gpuData" [value]="gpu">{{ gpu.brand }} {{ gpu.model }}</ion-select-option>
+        </ion-select>
+      </div>
+      <br>
+      <div *ngIf="caseData">
+        <ion-select fill="outline" interface="popover" [(ngModel)]="selectedCase" (ionChange)="onCaseSelect($event)" placeholder="Selecciona Case">
+          <ion-select-option *ngFor="let caseItem of filteredCaseData" [value]="caseItem">{{ caseItem.brand }} {{ caseItem.model }}</ion-select-option>
+        </ion-select>
+      </div>
+    </div>
+  </ion-content>
+</div>
