--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,22 +1,58 @@
+<ion-menu side="end" contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding" class="listMenu">
+    <ion-list>
+      <ion-item class="listMenu">
+        <ion-label>Profile</ion-label>
+      </ion-item>
+      <ion-item class="listMenu">
+        <ion-label>Settings</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
 <div class="ion-page" id="main-content">
-  <ion-header class="headerSection">
-    <ion-toolbar class="bar">
-      <div class="backArrow">
-        <ion-img src="../../../assets/img/arrow-back-circle-outline.svg"></ion-img>
+  <ion-header>
+    <ion-toolbar>
+      <div class="headerWrapper">
+        <div class="backArrow">
+          <ion-img
+            src="../../../assets/img/arrow-back-circle-outline.svg"
+            [routerLink]="['/login']"
+          ></ion-img>
+        </div>
+        <ion-title class="title">Hola, Usuario!</ion-title>
       </div>
-      <ion-title>Hola, Usuario!</ion-title>
+      <ion-buttons slot="end">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <ion-item>
-      <ion-card [routerLink]="['/main']">
-        <ion-card-header>Nueva Build</ion-card-header>
-      </ion-card>
-    </ion-item>
-    <ion-item>
-      <ion-card>
-        <ion-card-header>Mis Builds</ion-card-header>
-      </ion-card>
-    </ion-item>
+    <div class="mainWrapper">
+      <div class="subtitleWrapper">
+        <ion-label><h6>Bienvenido, selecciona una opción</h6></ion-label>
+      </div>
+      <p>Quieres...</p>
+      <div class="itemsWrapper">
+        <ion-item class="item">
+          <ion-button [routerLink]="['/main']">
+            <ion-card-header>Crear nueva Build</ion-card-header>
+          </ion-button>
+        </ion-item>
+      </div>
+      <p>o...</p>
+      <div class="itemsWrapper">
+        <ion-item>
+          <ion-button>
+            <ion-card-header>Ver mis Builds</ion-card-header>
+          </ion-button>
+        </ion-item>
+      </div>
+    </div>
   </ion-content>
 </div>
