--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -9,6 +9,11 @@ ion-toolbar {
 
 .title {
   background: rgb(15, 23, 72);
+  color: white;
+}
+
+.whiteText {
+  color: white;
 }
 
 .headerWrapper {
