--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -19,6 +19,6 @@
       <ion-label position="floating">Password</ion-label>
       <ion-input formControlName="password" type="password" ngDefaultControl></ion-input>
     </ion-item>
-    <ion-button expand="block" type="submit" [disabled]="!registrationForm.valid">Register</ion-button>
+    <ion-button expand="block" type="submit" [disabled]="!registrationForm?.valid">Register</ion-button>
   </form>
 </ion-content>
