--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,9 +2,9 @@
   <div class="logoSpace">
     <ion-img src="../../../assets/img/logo.png"></ion-img>
   </div>
-  
+
   <div class="login-container">
-    <!-- <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
       <ion-item>
         <ion-label position="floating">Email</ion-label>
         <ion-input formControlName="email" type="email"></ion-input>
@@ -13,11 +13,13 @@
         <ion-label position="floating">Password</ion-label>
         <ion-input formControlName="password" type="password"></ion-input>
       </ion-item>
-      <ion-button expand="block" type="submit" [disabled]="!loginForm.valid">Login</ion-button>
+      <ion-button expand="block" type="submit" [disabled]="!loginForm.valid"
+        >Login</ion-button
+      >
       <ion-text color="danger" *ngIf="errorMessage">
         <p>{{ errorMessage }}</p>
       </ion-text>
-    </form> -->
+    </form>
   </div>
   <div class="buttonGroup">
     <ion-button
