--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -53,6 +53,14 @@
           </ion-button>
         </ion-item>
       </div>
+      <p class="whiteText">Geolocalizacion</p>
+      <div class="itemsWrapper">
+        <ion-item>
+          <ion-button [routerLink]="['/geo']">
+            <ion-card-header>Click aqui</ion-card-header>
+          </ion-button>
+        </ion-item>
+      </div>
     </div>
   </ion-content>
 </div>
