--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,50 +1,35 @@
 ion-content {
-    --background: #113862;
+  --background: #113862;
 }
 
 .logoSpace {
-    width: 100%;
-    height: 113px;
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 30%;
-    margin-bottom: 25%;
+  width: 100%;
+  height: 113px;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 30%;
+  margin-bottom: 20%;
 }
 
-.loginInput {
-    width: 80%;
-    margin: auto;
+.loginInputTop {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px 10px 0 0;
 }
 
-
-ion-input.inputField {
-    border-radius: 10px;
-    --border-bottom: none;
+.loginInputBot {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 0 0 10px 10px;
+  margin-bottom: 10%;
 }
 
-.inputTop {
-    border-radius: 20px 20px 0px 0px;
-    border-bottom: none;
-}
-
-.inputBot {
-    border-radius: 0px 0px 20px 20px;
-    margin-bottom: 5%;
-}
-
-ion-button {
-    margin-top: 20px;
-    background: rgb(208, 106, 16);
-    border-radius: 5px;
-}
-
-/* .botonesLogin {
-    
-} */ 
-
-.buttonGroup {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
+.button {
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  width: 50%;
 }
